WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136753
[MIPS] abortWithReason missing
https://bugs.webkit.org/show_bug.cgi?id=136753
Summary
[MIPS] abortWithReason missing
Alberto Garcia
Reported
2014-09-11 13:10:19 PDT
This is a follow-up to
bug 136696
. abortWithReason() is missing for MIPS, what results in the following errors: Source/JavaScriptCore/yarr/YarrJIT.cpp:1647:56: error: there are no arguments to 'abortWithReason' that depend on a template parameter, so a declaration of 'abortWithReason' must be available [-fpermissive] Source/JavaScriptCore/yarr/YarrJIT.cpp:1703:56: error: there are no arguments to 'abortWithReason' that depend on a template parameter, so a declaration of 'abortWithReason' must be available [-fpermissive] Source/JavaScriptCore/yarr/YarrJIT.cpp:1647:56: error: 'abortWithReason' was not declared in this scope Source/JavaScriptCore/yarr/YarrJIT.cpp:1703:56: error: 'abortWithReason' was not declared in this scope Source/JavaScriptCore/yarr/YarrJIT.cpp:1647:56: error: 'abortWithReason' was not declared in this scope Source/JavaScriptCore/yarr/YarrJIT.cpp:1703:56: error: 'abortWithReason' was not declared in this scope All this is happening if I disable the JIT compiler, if I try to enable it then there's several other missing functions and methods. I understand that it's not supported in MIPS?
Attachments
Add two missing abortWithReason implementations in mips macro assembler
(1.56 KB, patch)
2016-01-07 08:02 PST
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2016-01-07 08:02:32 PST
Created
attachment 268452
[details]
Add two missing abortWithReason implementations in mips macro assembler
WebKit Commit Bot
Comment 2
2016-01-07 09:06:21 PST
Comment on
attachment 268452
[details]
Add two missing abortWithReason implementations in mips macro assembler Clearing flags on attachment: 268452 Committed
r194699
: <
http://trac.webkit.org/changeset/194699
>
WebKit Commit Bot
Comment 3
2016-01-07 09:06:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug