[mips] Add two missing abortWithReason implementations https://bugs.webkit.org/show_bug.cgi?id=136753

Patch by Julien Brianceau <jbriance@cisco.com> on 2016-01-07
Reviewed by Benjamin Poulain.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::memoryFence):
(JSC::MacroAssemblerMIPS::abortWithReason):
(JSC::MacroAssemblerMIPS::readCallTarget):

Canonical link: https://commits.webkit.org/170919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194699 268f45cc-cd09-0410-ab3c-d52691b4dbfc